# Hand

./: .gitignore  CMakeLists.txt  CMakePresets.json  info.ps1  package.json  pnpm-lock.yaml  tailwind.config.mjs  tsconfig.json  tsconfig.node.json  tsconfig.vite.json  validate.ps1  vite.config.ts
cmake/: Dependencies.cmake  Glow.cmake  Provider.cmake  add_plugin.cmake  clap-helpers.cmake  clap-wrapper.cmake  clap.cmake  deps.cmake  hand_plugin.cmake  plugin.cmake
cmake/config/: config.hxx
cmake/src/: descriptor.cxx  entry.cxx
cmake/src/include/hand/: descriptor.hxx
config/: descriptor.cxx
example/: CMakeLists.txt  example.cxx
examples/: CMakeLists.txt
examples/basic/: CMakeLists.txt  plugin.cxx
examples/gui/: CMakeLists.txt  plugin.cxx
examples/test/: CMakeLists.txt  plugin.cxx
gui/: index.html  tsconfig.json
gui/src/: index.tsx
gui/src/components/: App.tsx  Button.tsx
src/: create.cxx  descriptor.cxx  entry.cxx  event.cxx  factory.cxx  gui.cxx  gui_windows.cxx  helper.cxx  plugin.cxx  plugin.hxx  win32.cxx
src/include/hand/: descriptor.hxx  dll_main.hxx  entry.hxx  event.hxx  factory.hxx  gui.hxx  gui_choc.hxx  gui_windows.hxx  helper.hxx  plugin.hxx  win32.hxx
src/include/plugin/: descriptor.hxx  entry.hxx  event.hxx  factory.hxx  helper.hxx  plugin.hxx  win32.hxx
src/platform/windows/: gui.cxx  gui_windows.hxx
